add more description to swagger
